//file:noinspection GroovyAssignabilityCheck
//file:noinspection GroovyAccessibility
plugins {
	id "maven-publish"
	alias libs.plugins.loom
	alias libs.plugins.minotaur
}

version = "$modVersion+$branchName"
base.archivesName = project.slug

repositories {
	// for kaleido config
	maven { url 'https://repo.sleeping.town/' }

	// for occmy
	exclusiveContent {
		forRepository {
			maven {
				name = "Modrinth"
				url = "https://api.modrinth.com/maven"
			}
		}

		filter {
			includeGroup "maven.modrinth"
		}
	}

	exclusiveContent {
		forRepository {
			maven {
				name = "Jitpack"
				url = 'https://jitpack.io'
			}
		}

		filter {
			includeGroup "com.github.Virtuoel"
		}
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"be_a_doll" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	accessWidenerPath = file("src/main/resources/be_a_doll.accesswidener") // is this for neo? maybe.
}

dependencies {
	minecraft libs.mc
	mappings variantOf(libs.yarn) { classifier "v2" }

	modImplementation libs.fl
	modImplementation libs.fapi

	// fer config, 'cause it's nice and simple
	implementation 'folk.sisby:kaleido-config:0.3.1+1.3.1'
	include 'folk.sisby:kaleido-config:0.3.1+1.3.1'

	modApi(libs.pehkui) {
		exclude group: 'net.fabricmc.fabric-api'
	}

	// extra treat for clockwork dolls.. nevermind sorry 1.21.1 users
//	modCompileOnly "maven.modrinth:occipital-metonymy:C_"

	// doll-to-doll communication compat
	modCompileOnly "maven.modrinth:styled-chat:2.2.4+1.20.1"
	modCompileOnly "maven.modrinth:placeholder-api:2.1.4+1.20.1"
}

processResources {
	final Map<String, String> meta = [
		version       : version,
		modId         : modId,
		modName       : modName,
		modDescription: modDescription,
		homepage      : "https://modrinth.com/mod/${slug}",
		issues        : "https://github.com/${user}/${slug}/issues",
		sources       : "https://github.com/${user}/${slug}",
		license       : license,
		authors       : authors.split(", ").join("\",\n    \""),
		contributors  : contributors.split(", ").join("\",\n    \""),
		members       : "${authors}${contributors ? ". Contributions by ${contributors}." : ""}",
		mc            : compatibleVersions.split(", ")[0],
		fl            : libs.versions.fl.get(),
		fapi          : libs.versions.fapi.get(),
	]
	inputs.properties meta
	filesMatching("*.mod.json") { expand(meta) }
	filesMatching("META-INF/*mods.toml") { expand(meta) }
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 17
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}


publishing {
	repositories {
	}
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}
}

modrinth {
	token = "$System.env.MODRINTH_TOKEN"
	projectId = slug
	versionNumber = project.version
	uploadFile = remapJar
	gameVersions = compatibleVersions.split(", ").toList()
	loaders = compatibleLoaders.split(", ").toList()
	changelog = "$System.env.CHANGELOG"
	syncBodyFrom = "<!--DO NOT EDIT MANUALLY: synced from gh readme-->\n" + rootProject.file("README.md").text
	dependencies {
		required.version "fabric-api", libs.versions.fapi.get()
	}
}
